// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaletteTrigger props.trigger should accept a custom child component 1`] = `
<div>
  <div
    class="ui button"
    role="button"
    tabindex="0"
  >
    <b>
      foo
    </b>
  </div>
</div>
`;

exports[`PaletteTrigger props.trigger should accept a custom text string 1`] = `
<div>
  <div
    class="ui button"
    role="button"
    tabindex="0"
  >
    foo
  </div>
</div>
`;
